# Chime_AOP_Demo

./: .gitignore  README.md  docker-compose.yml  index_integrations.py
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/app/: initial_data.py  main.py
backend/app/agents/: search_integrations.py
backend/app/ai_docgen_portable/: docgen_runner.py  requirements.txt  setup_docgen.sh
backend/app/ai_docgen_portable/screendoc/: __init__.py  documentation_generator.py  screen_recorder.py  step_detector.py
backend/app/alembic/versions/: 692c3031d185_create_integrations_table.py
backend/app/api/api_v1/routers/: auth.py  users.py
backend/app/api/api_v1/routers/tests/: test_clerk.py
backend/app/core/: auth.py  clerk.py  config.py  security.py
backend/app/db/: models.py
backend/app/gemini-video-summarise/: requirements.txt  summarize_video.py  video1_actions.json  video1_summary.txt
backend/app/stagehand-action/: requirements.txt  run_automation.py  video1_actions.json  video1_summary.txt
backend/app/tests/: test_main.py
frontend/: .dockerignore  .gitignore  .prettierrc.mjs  CLIENT_CONFIGURATION_SUMMARY.md  Dockerfile  JPMORGAN_THEME_SUMMARY.md  README.md  VISUAL_UPLOAD_FEATURE.md  WORKFLOW_EXECUTION_API.md  deploy-webhook-droplet.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-llm-integration.js  tsconfig.json  vite.config.ts
integrations/: marketing_cloud_account_engagement.yaml
nginx/: .gitignore  nginx.conf
scripts/: .gitignore  README_pdf_workflow_extractor.md  generate_client.py  (+4 more)
(+115 files in other folders)
