[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.4.3",
    "authlib==0.14.3",
    "bcrypt==3.2.0",
    "celery==5.0.0",
    "fastapi==0.65.2",
    "httpx==0.23.0",
    "ipython==7.31.1",
    "itsdangerous==1.1.0",
    "jinja2==2.11.3",
    "openai==1.30.5",
    "passlib==1.7.2",
    "pgvector==0.2.5",
    "psycopg2==2.8.6",
    "pyjwt==1.7.1",
    "pytest==6.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.5",
    "pyyaml==6.0.1",
    "redis==3.5.3",
    "requests==2.24.0",
    "sqlalchemy-utils==0.36.8",
    "sqlalchemy==1.3.19",
    "uvicorn==0.12.1",
    "websockets==12.0",
]
