[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "authlib>=1.3.0",
    "bcrypt>=4.0.0",
    "celery>=5.3.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "ipython>=8.20.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "openai>=1.30.5",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.2.5",
    "psycopg2-binary",
    "pyjwt>=2.8.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
